package com.example.demo.entity.enums;

public enum ContentsStatus {
    DRAFT,
    SCHEDULED,
    PUBLISHED,
    CLOSED
}
