package com.example.demo.entity.enums;

public enum Role {
    Admin,
    User
}
