package com.example.demo.entity.enums;

public enum UserStatus {
    ACTIVE,
    INACTIVE,
    SUSPENDED
}
