package com.example.demo.repository;

import com.example.demo.entity.User;
import java.util.Optional;
import org.springframework.data.jpa.repository.JpaRepository;

// import java.util.Optional;

public interface UserRepository extends JpaRepository<User, Integer> {
    // Optional<User> findByName(String name);
    Optional<User> findByEmployeeId(Integer employeeId);

    boolean existsByEmployeeId(Integer employeeId);
}